# DeepX

./: .gitignore  README.md  build.sh  cifar100.ipynb  classify_digits.ipynb  dashboard.sh  image_classification.ipynb  mnist.ipynb  pyproject.toml  setup.py  test.py  train.py  up.sh
.github/workflows/: sphinx.yaml
a/examples/: langmodel.ipynb
apps/: classify.py  genimg.py  inference.py  segment.py  train_app.py  utils.py
deepx/: __init__.py  _version.py
deepx/algos/: __init__.py  algo.py  classification.py  imagegen.py  imggen.py  langmodel.py  segmentation.py  translation.py
deepx/dms/: __init__.py  classification.py  dm.py  langmodel.py  segmentation.py  translation.py
deepx/nn/: __init__.py  core.py  dcgan.py  gan.py  losses.py  mlp.py  resnet.py  transformer.py  unet.py  vae.py
deepx/tasks/: __init__.py  base.py  classification.py  core.py  gan.py  imagegen.py  inference.py  langmodel.py  profile.prof  segmentation.py  task.py  train.py  train_.py  train_app.py  translation.py  vae.py
deepx/trainers/: __init__.py  classification.py  gan.py  imagegen.py  imggen.py  langmodel.py  segmentation.py  trainer.py  translation.py
deepx/utils/: config.py  mlflow.py  typing.py  vision.py  wrappers.py
docs/: conf.py  deepx.algos.rst  deepx.callbacks.rst  deepx.dms.data.rst  deepx.nn.rst  deepx.rst  deepx.trainers.rst  index.rst  instruction.md  modules.rst  train.md
docs/examples/: classification.ipynb  ex.ipynb  seg.py  (+11 more)
envs/: Dockerfile  docker-compose.yaml  requirements.txt
experiments/: README.md  train.py
tests/: test_task.py
vision/: _version.py
(+136 files in other folders)
